mongoConnector/kubernetes/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: lang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: flask-app:v0.0
          ports:
            - containerPort: 5000
