mongoConnector/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: lang
spec:
  type: NodePort
  selector:
    app: flask
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30000
      # protocol: TCP
