mongoConnector/kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: lang
spec:
  rules:
    - host: flask.lang.local
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
            path: /
